--- a/Strahovanie/public/css/style.css
+++ b/Strahovanie/public/css/style.css
@@ -148,6 +148,11 @@ body {
 
 .header {
   border-bottom: 1px solid #D7E1E9;
+  position: relative;
+}
+
+.header__hamburger {
+  display: none;
 }
 
 .header__inner {
@@ -213,6 +218,10 @@ body {
   background-color: #2155CF;
   left: 0;
   bottom: -2px;
+}
+
+.menu__close {
+  display: none;
 }
 
 .insurance {
@@ -2103,6 +2112,79 @@ body {
 }
 
 @media screen and (max-width: 768px) {
+  .container {
+    padding: 0 16px;
+  }
+
+  .header__hamburger {
+    display: block;
+  }
+
+  .header__nav {
+    margin-left: 0;
+  }
+
+  .header__btn {
+    padding: 9px 15px;
+  }
+
+  .header__btn > span {
+    font-size: 12px;
+    line-height: 1;
+  }
+
+  .header__logo {
+    width: 97px;
+    height: 30px;
+  }
+
+  .nav {
+    position: absolute;
+    top: 0;
+    left: -100vw;
+    -webkit-transition: left ease 0.2s;
+    -o-transition: left ease 0.2s;
+    transition: left ease 0.2s;
+    background-color: #FFFFFF;
+    width: 100vw;
+    height: 100vh;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+  }
+
+  .nav_show {
+    left: 0;
+  }
+
+  .nav__list {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+  }
+
+  .nav__item:not(:last-child) {
+    margin-bottom: 10px;
+    margin-right: 0;
+  }
+
+  .menu__close {
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    display: block;
+  }
+
   .footer {
     padding-top: 50px;
     padding-bottom: 54px;
