--- a/Strahovanie/src/sass/components/offers/greencard.scss
+++ b/Strahovanie/src/sass/components/offers/greencard.scss
@@ -1,11 +1,19 @@
 .greencard {
   background-color: $blue-pale;
   padding: 60px 0;
+  @media screen and (max-width: $tablet) {
+    padding: 31px 0;
+  }
 
   &__header {
     padding: 31px 41px;
     color: $blue-dark;
     margin-top: 2px;
+    @media screen and (max-width: $tablet) {
+      padding: 0px;
+      padding-bottom: 26px;
+      @include font(32px, 35px);
+    }
   }
 
   &__content{
@@ -14,15 +22,28 @@
     align-items: flex-end;
     padding: 24px 40px;
     border-top: 1px solid #CFDAE2;
+    @media screen and (max-width: $tablet) {
+      padding: 0;
+      padding-top: 24px;
+      flex-direction: column;
+      align-items: baseline;
+    }
   }
 
   &__list {
     display: flex;
+    @media screen and (max-width: $tablet) {
+      flex-direction: column;
+    }
   }
 
   &__item {
     &:not(:last-child){
       margin-right: 120px;
+      @media screen and (max-width: $tablet) {
+        margin-right: 0;
+        margin-bottom: 18px;
+      }
     }
   }
 
@@ -43,6 +64,10 @@
         fill: $white;
       }
     }
+    @media screen and (max-width: $tablet) {
+      margin-top: 22px;
+      padding: 15px 45px;
+    }
   }
 }
 
@@ -53,6 +78,9 @@
     background-color: $white;
     border-radius: 10px;
     max-width: 1270px;
+    @media screen and (max-width: $tablet) {
+      padding: 24px;
+    }
   }
 }
 
