--- a/Strahovanie/public/css/style.css
+++ b/Strahovanie/public/css/style.css
@@ -1309,132 +1309,120 @@ body {
 }
 
 .proposals {
-  padding: 50px 0;
   background-color: #F1F8FE;
-}
-
-.proposals__wrapper {
-  margin: 30px auto;
   position: relative;
+  z-index: 0;
+  padding: 30px 0;
 }
 
-.proposals__wrapper::before {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  content: "";
-  -webkit-box-shadow: 0px 4px 46px rgba(123, 139, 181, 0.22);
-  box-shadow: 0px 4px 46px rgba(123, 139, 181, 0.22);
-  top: 0;
-  left: 0;
+.proposals__item:first-child {
+  padding-top: 50px;
+}
+
+.proposals__item:last-child {
+  padding-bottom: 50px;
 }
 
 .proposals__item:not(:last-child) {
   margin-bottom: 30px;
 }
 
-.proposal {
+.proposals__wrapper {
   position: relative;
-  z-index: 10;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+  border-radius: 10px;
+  -webkit-box-shadow: 0px 4px 46px rgba(123, 139, 181, 0.22);
+  box-shadow: 0px 4px 46px rgba(123, 139, 181, 0.22);
+}
+
+.proposal {
+  max-height: 120px;
   padding: 38px 0;
   margin-left: 54px;
   margin-right: 38px;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
-  height: 120px;
+  display: grid;
+  grid-template-areas: "proposal__logo proposal__stars proposal__name proposal__sum proposal__price proposal__button";
+  grid-template-columns: 21.5% 14% 24% 12% 1fr 1.01fr;
 }
 
 .proposal__vuso {
   width: 131px;
   height: 32px;
   background: url("../img/offers/vuso.svg") no-repeat;
+  margin-top: 7px;
 }
 
 .proposal__upsk {
   width: 131px;
   height: 29px;
   background: url("../img/offers/upsk.svg") no-repeat;
-  margin-top: -3px;
+  margin-top: 5px;
 }
 
 .proposal__asko {
   width: 131px;
   height: 34px;
   background: url("../img/offers/asko.svg") no-repeat;
-  margin-top: -4px;
+  margin-top: 4px;
 }
 
 .proposal__oranta {
   width: 121px;
   height: 45px;
   background: url("../img/offers/oranta.svg") no-repeat;
-  margin-top: -20px;
+  margin-top: -10px;
 }
 
-.characteristic {
+.proposal__stars {
+  margin-top: -5px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  width: 95px;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  margin-top: -4px;
 }
 
-.characteristic__item:not(:last-child) {
-  margin-right: 72px;
-}
-
-.characteristic__item.characteristic__price {
-  margin-right: 78px;
-}
-
-.characteristic__stars {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+.proposal__name {
   margin-top: -2px;
-}
-
-.characteristic__star:not(:last-child) {
-  margin-right: 4px;
-}
-
-.characteristic__name {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
   font-family: "Proxima Nova";
-  font-weight: normal;
   font-size: 16px;
-  line-height: 1.218125;
+  line-height: 1.1875;
   color: #263238;
-  padding-right: 10px;
 }
 
-.characteristic__sum {
+.proposal__sum {
+  margin-top: -5px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
   font-family: "Proxima Nova";
-  font-weight: normal;
   font-size: 18px;
   line-height: 1.2222222222;
   color: #263238;
 }
 
-.characteristic__price {
+.proposal__price {
+  margin-top: -5px;
+  margin-left: 8px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
   position: relative;
   font-family: "Proxima Nova";
   font-weight: 700;
@@ -1443,13 +1431,14 @@ body {
   color: #263238;
 }
 
-.characteristic__price_old {
+.proposal__price_old {
   position: absolute;
-  bottom: -25px;
+  left: 0;
+  bottom: -11px;
   color: rgba(38, 50, 56, 0.5);
 }
 
-.characteristic__price_old::after {
+.proposal__price_old::after {
   content: "";
   position: absolute;
   width: 81px;
@@ -1462,20 +1451,20 @@ body {
   left: -2px;
 }
 
-.characteristic__button {
+.proposal__button {
   border: none;
   background-color: #FF9504;
   padding: 14px 44px 14px 46px;
-  margin-top: 1px;
 }
 
-.characteristic__button > span {
+.proposal__button > span {
   color: #FFFFFF;
   font-size: 14px;
   line-height: 1;
+  letter-spacing: 0.08em;
 }
 
-.characteristic__button:hover {
+.proposal__button:hover {
   background-color: #E28300;
 }
 
