--- a/Strahovanie/src/sass/components/offers/proposal.scss
+++ b/Strahovanie/src/sass/components/offers/proposal.scss
@@ -1,167 +1,30 @@
-// .proposals {
-//   padding: 50px 0;
-//   background-color: $blue-pale;
-
-//   &__wrapper {
-//     margin: 30px auto;
-//     position: relative;
-//     &::before{
-//       position: absolute;
-//       width: 100%;
-//       height: 100%;
-//       content: '';
-//       box-shadow: 0px 4px 46px rgba(123, 139, 181, 0.22);
-//       top: 0;
-//       left: 0;
-//     }
-//   }
-
-//   &__item:not(:last-child) {
-//     margin-bottom: 30px;
-//   }
-
-// }
-
-// .proposal {
-//   position: relative;
-//   z-index: 10;
-//   display: flex;
-//   align-items: center;
-//   padding: 38px 0;
-//   margin-left: 54px;
-//   margin-right: 38px;
-//   justify-content: space-between;
-//   height: 120px;
-
-//   &__vuso {
-//     width: 131px;
-//     height: 32px;
-//     background: url("../img/offers/vuso.svg") no-repeat;
-//   }
-
-//   &__upsk{
-//     width: 131px;
-//     height: 29px;
-//     background: url("../img/offers/upsk.svg") no-repeat;
-//     margin-top: -3px;
-//   }
-
-//   &__asko {
-//     width: 131px;
-//     height: 34px;
-//     background: url("../img/offers/asko.svg") no-repeat;
-//     margin-top: -4px;
-//   }
-//   &__oranta {
-//     width: 121px;
-//     height: 45px;
-//     background: url("../img/offers/oranta.svg") no-repeat;
-//     margin-top: -20px;
-//   }
-// }
-
-
-
-// .characteristic {
-//   display: flex;
-//   align-items: center;
-//   margin-top: -4px;
-//   @media screen and (max-width: $tablet) {
-//     flex-wrap: wrap;
-//   }
-
-
-//   &__item {
-//     &:not(:last-child){
-//       margin-right: 72px;
-//     }
-//     &.characteristic__price{
-//       margin-right: 78px;
-//     }
-//   }
-
-//   &__stars {
-//     display: flex;
-//     align-items: center;
-//     margin-top: -2px;
-//   }
-
-//   &__star {
-//     &:not(:last-child) {
-//       margin-right: 4px;
-//     }
-//   }
-
-//   &__name {
-//     font-family: $font-main;
-//     font-weight: normal;
-//     @include font(16px, 19.49px);
-//     color: $gray-blue;
-//     padding-right: 10px;
-//   }
-
-//   &__sum {
-//   font-family: $font-main;
-//   font-weight: normal;
-//   @include font(18px, 22px);
-//   color: $gray-blue;
-//   }
-
-//   &__price {
-//     display: flex;
-//     flex-direction: column;
-//     position: relative;
-//     font-family: $font-main;
-//     font-weight: 700;
-//     @include font(18px, 22px);
-//     color: $gray-blue;
-
-//     &_old {
-//       position: absolute;
-//       bottom: -25px;
-//       color: rgba(38, 50, 56, 0.5);
-//       &::after{
-//         content: '';
-//         position: absolute;
-//         width: 81px;
-//         height: 1px;
-//         background-color: #AEAEAE;
-//         transform: rotate(-8.24deg);
-//         bottom: 45%;
-//         left: -2px;
-//       }
-//     }
-//   }
-
-//   &__button {
-//     border: none;
-//     background-color: $orange;
-//     padding: 14px 44px 14px 46px;
-//     margin-top: 1px;
-//     >span{
-//       color: $white;
-//       @include font(14px, 14px);      
-//     }
-//     &:hover{
-//       background-color: $orange-active;
-//     }
-//   }
-// }
 .proposals {
   background-color: $blue-pale;
   position: relative;
   z-index: 0;
   padding: 30px 0;
+  @media screen and (max-width: $tablet) {
+    padding: 0;
+  }
 
   &__item{
     &:first-child{
       padding-top: 50px;
+      @media screen and (max-width: $tablet) {
+        padding-top: 40px;
+      }
     }
     &:last-child{
       padding-bottom: 50px;
+      @media screen and (max-width: $tablet) {
+        padding-bottom: 40px;
+      }
     } 
     &:not(:last-child) {
       margin-bottom: 30px;
+      @media screen and (max-width: $tablet) {
+        margin-bottom: 20px;
+      }
     }
   }
 
@@ -169,23 +32,52 @@
     position: relative;
     border-radius: 10px;
     box-shadow: 0px 4px 46px rgba(123, 139, 181, 0.22);
+    @media screen and (max-width: $tablet) {
+      box-shadow: none;
+    }
   }
 }
 
 .proposal {
-  max-height: 120px;
   padding: 38px 0;
   margin-left: 54px;
-  margin-right: 38px;
+  margin-right: 38px;  
   display: grid;
-  grid-template-areas: 'proposal__logo proposal__stars proposal__name proposal__sum proposal__price proposal__button';
+  grid-template-areas: 'logo stars name sum price button';
   grid-template-columns: 21.5% 14% 24% 12% 1fr 1.01fr;
+
+  @media screen and (max-width: $tablet) {
+    align-items: end;
+    margin: 0;
+    padding: 20px 25px 32px;
+    grid-template-areas: 
+    'logo title_rating'
+    'logo stars'
+    'title_name title_name'
+    'name name'
+    'title_franchise title_price'
+    'sum price'
+    'button button';
+    grid-template-columns: 53% 47%;
+  }
+
+  &__logo{
+    grid-area: logo;
+    @media screen and (max-width: $tablet) {
+      margin-bottom: 26px;
+    }
+  }
 
   &__vuso {
       width: 131px;
       height: 32px;
       background: url("../img/offers/vuso.svg") no-repeat;
       margin-top: 7px;
+      @media screen and (max-width: $tablet) {
+        background-size: contain;
+        width: 98px;
+        height: 24px;
+      }
     }
 
     &__upsk{
@@ -193,6 +85,11 @@
       height: 29px;
       background: url("../img/offers/upsk.svg") no-repeat;
       margin-top: 5px;
+      @media screen and (max-width: $tablet) {
+        background-size: contain;
+        width: 113px;
+        height: 27px;
+      }
     }
 
     &__asko {
@@ -200,13 +97,49 @@
       height: 34px;
       background: url("../img/offers/asko.svg") no-repeat;
       margin-top: 4px;
+      @media screen and (max-width: $tablet) {
+        background-size: contain;
+        width: 94px;
+        height: 24px;
+      }
     }
     &__oranta {
       width: 121px;
       height: 45px;
       background: url("../img/offers/oranta.svg") no-repeat;
       margin-top: -10px;
+      @media screen and (max-width: $tablet) {
+        width: 86px;
+        height: 32px;
+        background-size: contain;
+      }
     }
+
+  &__title{
+    display: none;
+    @media screen and (max-width: $tablet) {
+      display: inline-block;
+      font-family: $font-main;
+      @include font(14px, 23px);
+      color: $blue-dark;
+      opacity: 0.5;
+      margin-bottom: 5px;
+    }
+    &_rating{
+      margin-top: 3px;
+      grid-area: title_rating;
+    }
+    &_name{
+      grid-area: title_name;
+      margin-top: 2px;
+    }
+    &_franchise{
+      grid-area: title_franchise;
+    }
+    &_price{
+      grid-area: title_price;
+    }
+  }
 
   &__stars {
     margin-top: -5px;
@@ -214,6 +147,10 @@
     width: 95px;
     justify-content: space-between;
     align-items: center;
+    grid-area: stars;
+    @media screen and (max-width: $tablet) {
+      margin-bottom: 23px;
+    }
   }
 
   &__name {
@@ -223,6 +160,12 @@
     font-family: $font-main;
     @include font(16px, 19px);
     color: $gray-blue;
+    grid-area: name;
+    @media screen and (max-width: $tablet) {
+      margin-bottom: 27px;
+      @include font(16px, 17px);
+      font-weight: 600;
+    }
   }
 
   &__sum {
@@ -232,6 +175,10 @@
     font-family: $font-main;
     @include font(18px, 22px);
     color: $gray-blue;
+    grid-area: sum;
+    @media screen and (max-width: $tablet) {
+      margin-bottom: 32px;
+    }
   }
 
   &__price {
@@ -244,12 +191,20 @@
     font-weight: 700;
     @include font(18px, 22px);
     color: $gray-blue;
+    grid-area: price;
+    @media screen and (max-width: $tablet) {
+      margin-bottom: 32px;
+      margin-left: 0;
+    }
 
     &_old {
       position: absolute;
       left: 0;
       bottom: -11px;
       color: rgba(38, 50, 56, 0.5);
+      @media screen and (max-width: $tablet) {
+        bottom: -100%;
+      }
       &::after{
         content: '';
         position: absolute;
@@ -267,6 +222,10 @@
     border: none;
     background-color: $orange;
     padding: 14px 44px 14px 46px;
+    grid-area: button;
+    @media screen and (max-width: $tablet) {
+      max-width: 277px;
+    }
     >span{
       color: $white;
       @include font(14px, 14px);     
