--- a/Strahovanie/public/css/style.css
+++ b/Strahovanie/public/css/style.css
@@ -1335,13 +1335,16 @@ body {
 }
 
 .proposal {
-  max-height: 120px;
   padding: 38px 0;
   margin-left: 54px;
   margin-right: 38px;
   display: grid;
-  grid-template-areas: "proposal__logo proposal__stars proposal__name proposal__sum proposal__price proposal__button";
+  grid-template-areas: "logo stars name sum price button";
   grid-template-columns: 21.5% 14% 24% 12% 1fr 1.01fr;
+}
+
+.proposal__logo {
+  grid-area: logo;
 }
 
 .proposal__vuso {
@@ -1372,6 +1375,28 @@ body {
   margin-top: -10px;
 }
 
+.proposal__title {
+  display: none;
+}
+
+.proposal__title_rating {
+  margin-top: 3px;
+  grid-area: title_rating;
+}
+
+.proposal__title_name {
+  grid-area: title_name;
+  margin-top: 2px;
+}
+
+.proposal__title_franchise {
+  grid-area: title_franchise;
+}
+
+.proposal__title_price {
+  grid-area: title_price;
+}
+
 .proposal__stars {
   margin-top: -5px;
   display: -webkit-box;
@@ -1384,6 +1409,7 @@ body {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
+  grid-area: stars;
 }
 
 .proposal__name {
@@ -1398,6 +1424,7 @@ body {
   font-size: 16px;
   line-height: 1.1875;
   color: #263238;
+  grid-area: name;
 }
 
 .proposal__sum {
@@ -1412,6 +1439,7 @@ body {
   font-size: 18px;
   line-height: 1.2222222222;
   color: #263238;
+  grid-area: sum;
 }
 
 .proposal__price {
@@ -1429,6 +1457,7 @@ body {
   font-size: 18px;
   line-height: 1.2222222222;
   color: #263238;
+  grid-area: price;
 }
 
 .proposal__price_old {
@@ -1455,6 +1484,7 @@ body {
   border: none;
   background-color: #FF9504;
   padding: 14px 44px 14px 46px;
+  grid-area: button;
 }
 
 .proposal__button > span {
@@ -2116,6 +2146,10 @@ body {
     display: block;
   }
 
+  .header__inner {
+    padding: 12px 0;
+  }
+
   .header__nav {
     margin-left: 0;
   }
@@ -2268,19 +2302,19 @@ body {
   }
 
   .greencard__wrapper {
-    padding: 24px;
+    padding: 24px 24px 36px;
   }
 
   .greencard__header {
     padding: 0px;
-    padding-bottom: 26px;
+    padding-bottom: 24px;
     font-size: 32px;
     line-height: 1.09375;
   }
 
   .greencard__content {
     padding: 0;
-    padding-top: 24px;
+    padding-top: 26px;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
     -ms-flex-direction: column;
@@ -2299,16 +2333,20 @@ body {
 
   .greencard__item:not(:last-child) {
     margin-right: 0;
-    margin-bottom: 18px;
+    margin-bottom: 17px;
+  }
+
+  .greencard__item:last-child {
+    margin-top: 7px;
   }
 
   .greencard__button {
-    margin-top: 22px;
+    margin-top: 26px;
     padding: 15px 45px;
   }
 
   .offer {
-    padding: 37px 0;
+    padding: 36px 0 38px;
   }
 
   .offer__content {
@@ -2316,6 +2354,7 @@ body {
     -webkit-box-direction: normal;
     -ms-flex-direction: column;
     flex-direction: column;
+    max-height: 328px;
   }
 
   .offer__sense {
@@ -2331,11 +2370,14 @@ body {
 
   .offer__text {
     line-height: 20px;
+    margin-top: 0;
+    margin-bottom: 15px;
   }
 
   .offer__header {
     font-size: 26px;
     line-height: 0.8461538462;
+    margin-bottom: 5px;
   }
 
   .sorting__item {
@@ -2355,12 +2397,111 @@ body {
   }
 
   .sorting__item > button > span {
+    display: inline-block;
     font-size: 12px;
     line-height: 1;
+    max-height: 46px;
   }
 
   .sorting__item_active {
     min-width: 0;
     width: 109px;
+  }
+
+  .proposals {
+    padding: 0;
+  }
+
+  .proposals__item:first-child {
+    padding-top: 40px;
+  }
+
+  .proposals__item:last-child {
+    padding-bottom: 40px;
+  }
+
+  .proposals__item:not(:last-child) {
+    margin-bottom: 20px;
+  }
+
+  .proposals__wrapper {
+    -webkit-box-shadow: none;
+    box-shadow: none;
+  }
+
+  .proposal {
+    -webkit-box-align: end;
+    -ms-flex-align: end;
+    align-items: end;
+    margin: 0;
+    padding: 20px 25px 32px;
+    grid-template-areas: "logo title_rating" "logo stars" "title_name title_name" "name name" "title_franchise title_price" "sum price" "button button";
+    grid-template-columns: 53% 47%;
+  }
+
+  .proposal__logo {
+    margin-bottom: 26px;
+  }
+
+  .proposal__vuso {
+    background-size: contain;
+    width: 98px;
+    height: 24px;
+  }
+
+  .proposal__upsk {
+    background-size: contain;
+    width: 113px;
+    height: 27px;
+  }
+
+  .proposal__asko {
+    background-size: contain;
+    width: 94px;
+    height: 24px;
+  }
+
+  .proposal__oranta {
+    width: 86px;
+    height: 32px;
+    background-size: contain;
+  }
+
+  .proposal__title {
+    display: inline-block;
+    font-family: "Proxima Nova";
+    font-size: 14px;
+    line-height: 1.6428571429;
+    color: #001237;
+    opacity: 0.5;
+    margin-bottom: 5px;
+  }
+
+  .proposal__stars {
+    margin-bottom: 23px;
+  }
+
+  .proposal__name {
+    margin-bottom: 27px;
+    font-size: 16px;
+    line-height: 1.0625;
+    font-weight: 600;
+  }
+
+  .proposal__sum {
+    margin-bottom: 32px;
+  }
+
+  .proposal__price {
+    margin-bottom: 32px;
+    margin-left: 0;
+  }
+
+  .proposal__price_old {
+    bottom: -100%;
+  }
+
+  .proposal__button {
+    max-width: 277px;
   }
 }
