--- a/Strahovanie/src/sass/components/header.scss
+++ b/Strahovanie/src/sass/components/header.scss
@@ -14,6 +14,9 @@
     align-items: center;
     justify-content: space-between;
     padding: 26px 0;
+    @media screen and (max-width: $tablet) {
+      padding: 12px 0;
+    }
   }
 
   &__nav {
