--- a/Strahovanie/public/css/style.css
+++ b/Strahovanie/public/css/style.css
@@ -2215,6 +2215,94 @@ body {
     display: block;
   }
 
+  .insurance {
+    padding: 60px 0;
+  }
+
+  .insurance__inner {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+    -ms-flex-direction: column-reverse;
+    flex-direction: column-reverse;
+    max-height: 605px;
+  }
+
+  .insurance__image {
+    position: relative;
+    background: none;
+    -ms-flex-item-align: start;
+    align-self: flex-start;
+  }
+
+  .insurance__image::after {
+    width: 100%;
+    height: 100%;
+    content: "";
+    position: absolute;
+    background: url("../icons/Intersect.svg") no-repeat;
+    top: 70px;
+    left: -55px;
+    -webkit-transform: rotate(90deg);
+    -ms-transform: rotate(90deg);
+    transform: rotate(90deg);
+    background-size: 100%;
+  }
+
+  .insurance__image img {
+    width: 284px;
+    height: 201px;
+  }
+
+  .insurance__content {
+    padding: 40px 0 10px;
+    max-width: 280px;
+  }
+
+  .action-plan {
+    margin-left: 0;
+    -ms-flex-item-align: center;
+    align-self: center;
+  }
+
+  .action-plan__header {
+    font-size: 26px;
+    line-height: 1;
+  }
+
+  .action-plan__list {
+    margin-bottom: 32px;
+  }
+
+  .action-plan__item {
+    background-position: left 20%;
+  }
+
+  .action-plan__item:not(:last-child) {
+    margin-bottom: 16px;
+  }
+
+  .action-plan__text {
+    font-size: 18px;
+    line-height: 1.2222222222;
+  }
+
+  .action-plan__button {
+    font-size: 12px;
+    line-height: 1;
+    width: 280px;
+    height: 52px;
+    padding: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+  }
+
   .footer {
     padding-top: 50px;
     padding-bottom: 54px;
