--- a/Strahovanie/public/css/style.css
+++ b/Strahovanie/public/css/style.css
@@ -2137,6 +2137,20 @@ body {
   margin-top: -2px;
 }
 
+@media screen and (max-width: 1275px) {
+  .header__nav {
+    margin-left: 20px;
+  }
+
+  .header__btn {
+    padding: 12px 20px;
+  }
+
+  .nav__item:not(:last-child) {
+    margin-right: 20px;
+  }
+}
+
 @media screen and (max-width: 768px) {
   .container {
     padding: 0 16px;
@@ -2191,6 +2205,7 @@ body {
 
   .nav_show {
     left: 0;
+    z-index: 10;
   }
 
   .nav__list {
@@ -2591,5 +2606,91 @@ body {
 
   .proposal__button {
     max-width: 277px;
+  }
+
+  .callback {
+    background-color: #FFFFFF;
+    padding: 40px 0 0;
+  }
+
+  .callback__header {
+    font-size: 32px;
+    line-height: 1.09375;
+    margin-bottom: 32px;
+  }
+
+  .feed {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+  }
+
+  .feed__form {
+    width: 100%;
+    margin-right: 0;
+    margin-bottom: 60px;
+  }
+
+  .feedback__item:not(:last-child) {
+    margin-bottom: 20px;
+  }
+
+  .feedback__item textarea {
+    height: 124px;
+  }
+
+  .feedback__person {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+  }
+
+  .feedback__person input {
+    width: 100%;
+  }
+
+  .feedback__sender:not(:last-child) {
+    margin-right: 0;
+    margin-bottom: 20px;
+  }
+
+  .feedback__btn {
+    width: 100%;
+    max-height: 52px;
+    font-size: 12px;
+    line-height: 1;
+    margin-top: 32px;
+  }
+
+  .instruction {
+    width: 100%;
+    height: 100%;
+    background-image: none;
+  }
+
+  .instruction__wrapper {
+    padding: 32px 10px 32px 16px;
+  }
+
+  .instruction__header {
+    font-size: 26px;
+    line-height: 1.1923076923;
+    margin-bottom: 24px;
+  }
+
+  .instruction__item {
+    font-size: 18px;
+    line-height: 1;
+  }
+
+  .instruction__item:not(:last-child) {
+    margin-bottom: 12px;
+  }
+
+  .instruction__item::before {
+    top: 8px;
+    left: 0;
   }
 }
