--- a/Strahovanie/src/sass/components/contacts/callback.scss
+++ b/Strahovanie/src/sass/components/contacts/callback.scss
@@ -1,21 +1,37 @@
 .callback {
   background-color: #F8FBFE;
   padding: 70px 0 90px 0;
+  @media screen and (max-width: $tablet) {
+    background-color: $white;
+    padding: 40px 0 0;
+  }
 
   &__header {
     margin-bottom: 40px;
     color: $blue-dark;
+    @media screen and (max-width: $tablet) {
+      @include font(32px, 35px);
+      margin-bottom: 32px;
+    }
   }
 }
 
 
 .feed {
   display: flex;
+  @media screen and (max-width: $tablet) {
+    flex-direction: column;
+  }
 
   &__form {
     margin-top: -3px;
     width: 490px;
     margin-right: 160px;
+    @media screen and (max-width: $tablet) {
+      width: 100%;
+      margin-right: 0;
+      margin-bottom: 60px;
+    }
   }
 }
 
@@ -27,6 +43,9 @@
   &__item {
     &:not(:last-child){
       margin-bottom: 20px;
+      @media screen and (max-width: $tablet) {
+        margin-bottom: 20px;
+      }
     }
     & input{
       width: 100%;
@@ -38,17 +57,30 @@
       padding: 10px 14px;
       border: 1px solid #D7E1E9;
       border-radius: 6px;
+      @media screen and (max-width: $tablet) {
+        height: 124px;
+      }
     }
   }
 
   &__person {
     display: flex;
+    @media screen and (max-width: $tablet) {
+      flex-direction: column;
+      & input{
+        width: 100%;
+      }
+    }
 
   }
 
   &__sender {
     &:not(:last-child){
       margin-right: 30px;
+      @media screen and (max-width: $tablet) {
+        margin-right: 0;
+        margin-bottom: 20px;
+      }
     }
     >input{
       width: 230px;
@@ -88,6 +120,12 @@
     &:hover{
       background-color: $orange-active;
     }
+    @media screen and (max-width: $tablet) {
+      width: 100%;
+      max-height: 52px;
+      @include font(12px, 12px);
+      margin-top: 32px;
+    }
   }
 }
 
@@ -100,14 +138,26 @@
   background-image: url('../icons/Intersect.svg');
   background-repeat: no-repeat;
   background-position: 140% -640%;
+  @media screen and (max-width: $tablet) {
+    width: 100%;
+    height: 100%;
+    background-image: none;
+  }
 
   &__wrapper {
     padding: 67px 64px 74px 64px;
+    @media screen and (max-width: $tablet) {
+      padding: 32px 10px 32px 16px;
+    }
   }
 
   &__header {
     color: $white;
     margin-bottom: 30px;
+    @media screen and (max-width: $tablet) {
+      @include font(26px, 31px);
+      margin-bottom: 24px;
+    }
   }
 
   &__item {
@@ -128,6 +178,16 @@
       position: absolute;
       left: -1px;
       top: 35%;
+    }
+    @media screen and (max-width: $tablet) {
+      @include font(18px, 18px);
+      &:not(:last-child) {
+        margin-bottom: 12px;
+      }
+      &::before {
+        top: 8px;
+        left: 0;
+      }
     }
   }
 }
