--- a/Strahovanie/public/css/style.css
+++ b/Strahovanie/public/css/style.css
@@ -1701,6 +1701,8 @@ body {
 
 .about__img {
   border-radius: 12px;
+  -o-object-fit: cover;
+  object-fit: cover;
 }
 
 .introduction__header {
@@ -2692,5 +2694,70 @@ body {
   .instruction__item::before {
     top: 8px;
     left: 0;
+  }
+
+  .about {
+    padding-top: 40px;
+  }
+
+  .about__wrapper {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+  }
+
+  .about__content {
+    margin-bottom: 32px;
+  }
+
+  .about__img {
+    width: 100%;
+    height: 200px;
+  }
+
+  .introduction__header {
+    font-size: 32px;
+    line-height: 1.09375;
+    margin-bottom: 16px;
+  }
+
+  .introduction__text {
+    font-size: 16px;
+    line-height: 1.5;
+  }
+
+  .insurances {
+    padding: 60px 0;
+  }
+
+  .insurances__header {
+    font-size: 26px;
+    line-height: 1;
+    margin-bottom: 32px;
+  }
+
+  .belay__list {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    row-gap: 25px;
+  }
+
+  .belay__wrapper {
+    width: 328px;
+    height: 182px;
+    background-size: 328px 182px;
+  }
+
+  .belay__name {
+    margin-left: 0;
+    margin-bottom: 23px;
+    text-align: center;
+  }
+
+  .belay__gradient {
+    height: 109px;
   }
 }
