--- a/Strahovanie/src/sass/components/about/about-us.scss
+++ b/Strahovanie/src/sass/components/about/about-us.scss
@@ -1,18 +1,32 @@
 .about {
   padding-top: 80px;
+  @media screen and (max-width: $tablet) {
+    padding-top: 40px;
+  }
 
   &__wrapper {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    @media screen and (max-width: $tablet) {
+      flex-direction: column;      
+    }
   }
 
   &__content {
     max-width: 750px;
+    @media screen and (max-width: $tablet) {
+      margin-bottom: 32px;
+    }
   }
 
   &__img {
     border-radius: 12px;
+    object-fit: cover;
+    @media screen and (max-width: $tablet) {
+      width: 100%;
+      height: 200px;
+    }
   }
 }
 
@@ -22,6 +36,10 @@
   &__header {
     color: $blue-dark;
     margin-bottom: 24px;
+    @media screen and (max-width: $tablet) {
+      @include font(32px, 35px);
+      margin-bottom: 16px;
+    }
   }
 
   &__text {
@@ -30,5 +48,8 @@
     @include font(18px, 27px);
     color: $blue-dark;
     opacity: 0.8;
+    @media screen and (max-width: $tablet) {
+      @include font(16px, 24px);
+    }
   }
 }
