--- a/Strahovanie/src/sass/components/about/insurance-types.scss
+++ b/Strahovanie/src/sass/components/about/insurance-types.scss
@@ -1,11 +1,18 @@
 .insurances {
   padding: 100px 0;
+  @media screen and (max-width: $tablet) {
+    padding: 60px 0;
+  }
 
   &__header {
     color: $blue-dark;
     text-align: center;
     margin-bottom: 43px;
     @include font(46px, 55px);
+    @media screen and (max-width: $tablet) {
+      @include font(26px, 26px);
+      margin-bottom: 32px;
+    }
   }
 }
 
@@ -15,6 +22,10 @@
     justify-content: space-between;
     flex-wrap: wrap;
     row-gap: 10px;
+    @media screen and (max-width: $tablet) {
+      flex-direction: column;
+      row-gap: 25px;
+    }
   }
 
   &__link {
@@ -42,6 +53,11 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
+    @media screen and (max-width: $tablet) {
+      width: 328px;
+      height: 182px;
+      background-size: 328px 182px;
+    }
   }
 
   &__name{
@@ -51,6 +67,11 @@
     color: $white;
     margin-left: 24px;
     margin-bottom: 21px;    
+    @media screen and (max-width: $tablet) {
+      margin-left: 0;
+      margin-bottom: 23px;
+      text-align: center;
+    }
   }
 
   &__gradient{
@@ -62,6 +83,9 @@
     height: 120px;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
+    @media screen and (max-width: $tablet) {
+      height: 109px;
+    }
   }
 
   &__osago{
