--- a/Strahovanie/public/css/style.css
+++ b/Strahovanie/public/css/style.css
@@ -2402,6 +2402,70 @@ body {
     margin-bottom: 24px;
   }
 
+  .swiper-horizontal > .swiper-pagination-progressbar,
+  .swiper-pagination-progressbar.swiper-pagination-horizontal {
+    top: 30%;
+  }
+
+  .arrange {
+    border-color: #F1F8FE;
+    padding: 60px 0 10px 0;
+  }
+
+  .arrange__header {
+    font-size: 26px;
+    line-height: 1;
+    margin-bottom: 40px;
+  }
+
+  .switch {
+    margin-bottom: 12px;
+  }
+
+  .switch__index {
+    width: 34px;
+    height: 34px;
+    font-size: 18px;
+    line-height: 1.5;
+  }
+
+  .switch__index::after {
+    width: 44px;
+    height: 44px;
+  }
+
+  .switch__description {
+    display: none;
+  }
+
+  .step {
+    height: 270px;
+  }
+
+  .step__wrapper {
+    padding: 24px 19px 50px 18px;
+  }
+
+  .step__img {
+    display: none;
+  }
+
+  .step__content {
+    margin-top: 0;
+  }
+
+  .step__header {
+    font-size: 20px;
+    line-height: 1.3;
+    margin-bottom: 10px;
+  }
+
+  .step__text {
+    font-size: 16px;
+    line-height: 1.375;
+    opacity: 0.7;
+  }
+
   .greencard {
     padding: 31px 0;
   }
@@ -2753,7 +2817,7 @@ body {
 
   .belay__name {
     margin-left: 0;
-    margin-bottom: 23px;
+    margin-bottom: 20px;
     text-align: center;
   }
 
